Modification du style dans register et login et la traduction

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -137,6 +137,7 @@
     "New": "Nouveau",
     "New :name": "Nouveau :name",
     "New Password": "Nouveau mot de passe",
+    "New Account": "Nouveau compte",
     "No": "Non",
     "No Content": "Pas de contenu",
     "Non-Authoritative Information": "Informations non autorisées",
