mise à jour de laravel/lang

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -2,6 +2,7 @@
     "(and :count more error)": "(et :count erreur en plus)",
     "(and :count more errors)": "(et :count erreur en plus)|(et :count erreurs en plus)|(et :count erreurs en plus)",
     "A decryption key is required.": "A decryption key is required.",
+    "A few extra meta fields and we are almost done": "Quelques champs supplémentaires de métadonnées et nous sommes presque prêts",
     "A new verification link has been sent to the email address you provided during registration.": "Un nouveau lien de vérification a été envoyé à l'adresse e-mail que vous avez indiquée lors de votre inscription.",
     "A new verification link has been sent to your email address.": "Un nouveau lien de vérification a été envoyé à votre adresse e-mail.",
     "A Timeout Occurred": "Un dépassement de délai s'est produit",
@@ -16,6 +17,7 @@
     "All rights reserved.": "Tous droits réservés.",
     "Already registered?": "Déjà inscrit·e ?",
     "Already Reported": "Déjà rapporté",
+    "Apply": "Postuler",
     "Archive": "Archive",
     "Are you sure you want to delete your account?": "Êtes-vous sûr·e de vouloir supprimer votre compte ?",
     "Assign": "Attribuer",
@@ -62,6 +64,7 @@
     "Duplicate :name": "Dupliquer :name",
     "Edit": "Éditer",
     "Edit :name": "Modifier :name",
+    "Edit job :name": "Modifier l'offre :name",
     "Email": "E-mail",
     "email": "Le champ :attribute doit être une adresse e-mail valide.",
     "Email Password Reset Link": "Lien de réinitialisation du mot de passe",
@@ -81,6 +84,7 @@
     "Failed Dependency": "Dépendance échouée",
     "File": "Déposer",
     "Files": "Des dossiers",
+    "Find your dream job": "Trouvez votre job idéal",
     "Forbidden": "Interdit",
     "Forgot your password?": "Mot de passe oublié ?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Mot de passe oublié ? Pas de soucis. Veuillez nous indiquer votre adresse e-mail et nous vous enverrons un lien de réinitialisation du mot de passe.",
@@ -110,6 +114,11 @@
     "Invalid filename.": "Invalid filename.",
     "Invalid JSON was returned from the route.": "Un JSON non valide a été renvoyé par la route.",
     "Invalid SSL Certificate": "Certificat SSL invalide",
+    "Job Description": "Description de l'offre",
+    "Job Information": "Informations sur l'offre",
+    "Job Meta": "Métadonnées de l'offre",
+    "Job Summary": "Résumé de l'offre",
+    "Jobs to be validated": "Offres à valider",
     "length": "length",
     "Length Required": "Longueur requise",
     "Like": "Comme",
@@ -166,6 +175,9 @@
     "Payment Required": "Paiement requis",
     "Permanent Redirect": "Redirection permanente",
     "Please click the button below to verify your email address.": "Veuillez cliquer sur le bouton ci-dessous pour vérifier votre adresse e-mail :",
+    "Please fill all the required Job information": "Veuillez remplir toutes les informations requises de l'offre",
+    "Post a new Job": "Poster une nouvelle offre",
+    "Post new Job": "Poster une nouvelle offre",
     "Precondition Failed": "La précondition a échoué",
     "Precondition Required": "Condition préalable requise",
     "Preview": "Aperçu",
@@ -177,6 +189,7 @@
     "Railgun Error": "Erreur de Railgun",
     "Range Not Satisfiable": "Plage non satisfaisante",
     "Record": "Enregistrer",
+    "Recruteur description": "Description du recruteur",
     "Regards,": "Cordialement,",
     "Register": "Inscription",
     "Remember me": "Se souvenir de moi",
@@ -197,6 +210,7 @@
     "Saved.": "Sauvegardé.",
     "Search": "Rechercher",
     "Search :name": "Recherche :name",
+    "Search Job by title or type": "Rechercher une offre par titre ou type",
     "See Other": "Voir autre",
     "Select": "Sélectionner",
     "Select All": "Tout sélectionner",
@@ -230,6 +244,7 @@
     "This is a secure area of the application. Please confirm your password before continuing.": "Ceci est une zone sécurisée de l'application. Veuillez confirmer votre mot de passe avant de continuer.",
     "This password reset link will expire in :count minutes.": "Ce lien de réinitialisation du mot de passe expirera dans :count minutes.",
     "to": "à",
+    "today": "aujourd'hui",
     "Toggle navigation": "Afficher / masquer le menu de navigation",
     "Too Early": "Trop tôt",
     "Too Many Requests": "Trop de requêtes",
@@ -251,29 +266,17 @@
     "URI Too Long": "URI trop long",
     "Use Proxy": "Utiliser un proxy",
     "User": "Utilisateur",
+    "Validate": "Valider",
     "Variant Also Negotiates": "La variante négocie également",
     "Verify Email Address": "Vérifier l'adresse e-mail",
     "View": "Vue",
     "View :name": "Voir :name",
+    "We offer the most complete job platform to publish your job offers and apply for your dream job.": "Nous offrons la plateforme de travail la plus complète pour publier vos offres de travail et vous inscrire à votre job idéal.",
     "Web Server is Down": "Le serveur Web est en panne",
     "Whoops!": "Oups !",
     "Yes": "Oui",
     "You are receiving this email because we received a password reset request for your account.": "Vous recevez cet e-mail car nous avons reçu une demande de réinitialisation de mot de passe pour votre compte.",
     "You're logged in!": "Vous êtes connecté·e !",
-    "Your email address is unverified.": "Votre adresse e-mail n'est pas vérifiée.",
-    "Find your dream job": "Trouvez votre job idéal",
-    "today": "aujourd'hui",
-    "We offer the most complete job platform to publish your job offers and apply for your dream job.": "Nous offrons la plateforme de travail la plus complète pour publier vos offres de travail et vous inscrire à votre job idéal.",
-    "Search Job": "Rechercher une offre",
-    "Apply": "Postuler",
-    "Post a new Job": "Poster une nouvelle offre",
     "Your current jobs": "Vos offre actuels",
-    "Job Information": "Informations sur l'offre",
-    "Please fill all the required Job information": "Veuillez remplir toutes les informations requises de l'offre",
-    "Job Meta": "Métadonnées de l'offre",
-    "A few extra meta fields and we are almost done": "Quelques champs supplémentaires de métadonnées et nous sommes presque prêts",
-    "Post new Job": "Poster une nouvelle offre",
-    "Edit job :name": "Modifier l'offre :name",
-    "Job Summary": "Résumé de l'offre",
-    "Job Description": "Description de l'offre"
+    "Your email address is unverified.": "Votre adresse e-mail n'est pas vérifiée."
 }
