mise à jour de laravel/lang

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -207,10 +207,11 @@
     "Save & Close": "Sauvegarder et fermer",
     "Save & Return": "Enregistrer et retourner",
     "Save :name": "Économisez :name",
+    "Save changes": "Sauvegarder les modifications",
     "Saved.": "Sauvegardé.",
     "Search": "Rechercher",
     "Search :name": "Recherche :name",
-    "Search Job by title or type": "Rechercher une offre par titre ou type",
+    "Search Job by title or type or category": "Rechercher une offre par titre ou type ou catégorie",
     "See Other": "Voir autre",
     "Select": "Sélectionner",
     "Select All": "Tout sélectionner",
